@@ -13,11 +13,11 @@ nedit.highlightPatterns: \
 		DATA:"DATA ":"\\n"::Storage Type::\n\
 		operatoren:"[=<>]|<(AND|and|OR|or|NOT|not|DIV|div|MOD|mod|XOR|xor)>":::Preprocessor::\n\
 		num Konst:"<((0(x|X)[0-9a-fA-F]*)|(([0-9]+\\.?[0-9]*)|(\\.[0-9]+))((e|E)(\\+|-)?[0-9]+)?)(L|l|UL|ul|u|U|F|f)?>":::Numeric Const::\n\
-	        SYSVARS:"<(ANDROID\\?|android\\?|COLS|cols|CRSCOL|crscol|CRSLIN|crslin|CTIMER|ctimer|ERR|err|FALSE|false|GPS\\?|gps\\?|GPS_ALT|gps_alt|GPS_LAT|gps_lat|GPS_LON|gps_lon|MOUSEK|mousek|MOUSES|mouses|MOUSEX|mousex|MOUSEY|mousey|PC|pc|PI|pi|ROWS|rows|SENSOR\\?|sensor\\?|SP|sp|STIMER|stimer|TIMER|timer|TRUE|true|UNIX\\?|unix\\?|WIN32\\?|win32\\?|DATE\\$|date\\$|FILEEVENT\\$|fileevent\\$|INKEY\\$|inkey\\$|TERMINALNAME\\$|terminalname\\$|TIME\\$|time\\$|TRACE\\$|trace\\$)>":::Flag::\n\
+	        SYSVARS:"<(ANS|ANDROID\\?|android\\?|COLS|cols|CRSCOL|crscol|CRSLIN|crslin|CTIMER|ctimer|ERR|err|FALSE|false|GPS\\?|gps\\?|GPS_ALT|gps_alt|GPS_LAT|gps_lat|GPS_LON|gps_lon|MOUSEK|mousek|MOUSES|mouses|MOUSEX|mousex|MOUSEY|mousey|PC|pc|PI|pi|ROWS|rows|SENSOR\\?|sensor\\?|SP|sp|STIMER|stimer|TIMER|timer|TRUE|true|UNIX\\?|unix\\?|WIN32\\?|win32\\?|DATE\\$|date\\$|FILEEVENT\\$|fileevent\\$|INKEY\\$|inkey\\$|TERMINALNAME\\$|terminalname\\$|TIME\\$|time\\$|TRACE\\$|trace\\$)>":::Flag::\n\
 		Keyword:"<(TRON|TROFF|tron|troff|BREAK|break|STOP|stop|CONT|cont|CONTINUE|continue|DEFAULT|default|DO|do|EXIT|exit|GET_GEOMETRY|get_geometry|GOSUB|gosub|GOTO|goto|IF|if|ELSE|else|ENDIF|endif|WHILE|while|WEND|wend|REPEAT|repeat|UNTIL|until|DO|do|LOOP|loop|DEFFN|deffn|FUNCTION|function|PROCEDURE|procedure|PROGRAM|program|RETURN|return|ENDFUNC|endfunc|ENDFUNCTION|endfunction|for|FOR|next|NEXT|END|end|echo|ECHO|ON|OFF|on|off|quit|QUIT|TO|to|DOWNTO|downto|step|STEP|SWITCH|switch|CASE|case|SELECT|select|ENDSELECT|endselect)>":::Keyword::\n\
 		Keyword2:"<(ABSOLUTE|absolute|ADD|add|AFTER|after|ALERT|alert|ARRAYCOPY|arraycopy|ARRAYFILL|arrayfill|BEEP|beep|BELL|bell|BGET|bget|BLOAD|bload|BMOVE|bmove|BOTTOMW|bottomw|BOUNDARY|boundary|BOX|box|BPUT|bput|BREAK|break|BSAVE|bsave|CALL|call|CASE|case|CHAIN|chain|CHDIR|chdir|CHMOD|chmod|CIRCLE|circle|CLEAR|clear|CLEARW|clearw|CLIP|clip|CLOSE|close|CLOSEW|closew|CLR|clr|CLS|cls|COLOR|color|CONNECT|connect|CONTINUE|continue|COPYAREA|copyarea|CURVE|curve|DATA|data|DEC|dec|DEFAULT|default|DEFFILL|deffill|DEFFN|deffn|DEFLINE|defline|DEFMARK|defmark|DEFMOUSE|defmouse|DEFTEXT|deftext|DELAY|delay|DIM|dim|DIV|div|DO|do|DPOKE|dpoke|DRAW|draw|DUMP|dump|ECHO|echo|EDIT|edit|ELLIPSE|ellipse|ELSE|else|END|end|ENDFUNCTION|endfunction|ENDIF|endif|ENDPROCEDURE|endprocedure|ENDSELECT|endselect|ERASE|erase|ERROR|error|EVAL|eval|EVENT|event|EVERY|every|EXEC|exec|EXIT|exit|FFT|fft|FILESELECT|fileselect|FILL|fill|FIT|fit|FIT_LINEAR|fit_linear|FIT_POLY|fit_poly|FLUSH|flush|FOR|for|FREE|free|FULLW|fullw|FUNCTION|function|GET|get|GET_GEOMETRY|get_geometry|GET_LOCATION|get_location|GET_SCREENSIZE|get_screensize|GOSUB|gosub|GOTO|goto|GPRINT|gprint|GPS|gps|GRAPHMODE|graphmode|HELP|help|HIDEM|hidem|HOME|home|IF|if|INC|inc|INFOW|infow|INPUT|input|KEYEVENT|keyevent|KILL|kill|LET|let|LINE|line|LINEINPUT|lineinput|LINK|link|LIST|list|LOAD|load|LOCAL|local|LOCATE|locate|LOOP|loop|LPOKE|lpoke|LTEXT|ltext|MEMDUMP|memdump|MENU|menu|MENUDEF|menudef|MENUKILL|menukill|MENUSET|menuset|MERGE|merge|MFREE|mfree|MKDIR|mkdir|MOUSE|mouse|MOUSEEVENT|mouseevent|MOTIONEVENT|motionevent|MOVEW|movew|MSYNC|msync|MUL|mul|NEW|new|NEXT|next|NOOP|noop|NOP|nop|NOROOTWINDOW|norootwindow|OBJC_ADD|objc_add|OBJC_DELETE|objc_delete|ON|on|ON|on|ON|on|ON|on|ON|on|ON|on|OPEN|open|OPENW|openw|OUT|out|PAUSE|pause|PBOX|pbox|PCIRCLE|pcircle|PELLIPSE|pellipse|PIPE|pipe|PLAYSOUND|playsound|PLAYSOUNDFILE|playsoundfile|PLIST|plist|PLOT|plot|POKE|poke|POLYFILL|polyfill|POLYLINE|polyline|POLYMARK|polymark|PRBOX|prbox|PRINT|print|PROCEDURE|procedure|PROGRAM|program|PUT|put|PUTBACK|putback|PUT_BITMAP|put_bitmap|QUIT|quit|RANDOMIZE|randomize|RBOX|rbox|READ|read|RECEIVE|receive|RELSEEK|relseek|REM|rem|RENAME|rename|REPEAT|repeat|RESTORE|restore|RETURN|return|RMDIR|rmdir|ROOTWINDOW|rootwindow|RSRC_FREE|rsrc_free|RSRC_LOAD|rsrc_load|RUN|run|SAVE|save|SAVESCREEN|savescreen|SAVEWINDOW|savewindow|SCOPE|scope|SCREEN|screen|SEEK|seek|SELECT|select|SEND|send|SENSOR|sensor|SETFONT|setfont|SETMOUSE|setmouse|SGET|sget|SHELL|shell|SHM_DETACH|shm_detach|SHM_FREE|shm_free|SHOWM|showm|SHOWPAGE|showpage|SIZEW|sizew|SORT|sort|SOUND|sound|SPAWN|spawn|SPEAK|speak|SPLIT|split|SPUT|sput|STOP|stop|SUB|sub|SWAP|swap|SYSTEM|system|TEXT|text|TITLEW|titlew|TOPW|topw|TOUCH|touch|TROFF|troff|TRON|tron|UNLINK|unlink|UNMAP|unmap|UNTIL|until|USEWINDOW|usewindow|VERSION|version|VOID|void|VSYNC|vsync|WATCH|watch|WAVE|wave|WEND|wend|WHILE|while|WORT_SEP|wort_sep|XLOAD|xload|XRUN|xrun|\\?)>":::Text Key::\n\
 		Numbers:"#[0-9]*":::String2::\n\
-		sysfunctions:"(ABS|abs|ACOS|acos|ACOSH|acosh|ARRPTR|arrptr|ASC|asc|ASIN|asin|ASINH|asinh|ATAN|atan|ATAN2|atan2|ATANH|atanh|ATN|atn|BCHG|bchg|BCLR|bclr|BSET|bset|BTST|btst|CBRT|cbrt|CEIL|ceil|COS|cos|COSH|cosh|CRC|crc|CVD|cvd|CVF|cvf|CVI|cvi|CVL|cvl|CVS|cvs|DEG|deg|DET|det|DIM\\?|dim\\?|DPEEK|dpeek|EVEN|even|EXEC|exec|EXIST|exist|EXP|exp|EXPM1|expm1|FAK|fak|FFT|fft|FIX|fix|FLOOR|floor|FORK|fork|FORM_ALERT|form_alert|FORM_CENTER|form_center|FORM_DIAL|form_dial|FORM_DO|form_do|FRAC|frac|FSFIRST\\$|fsfirst\\$|FSNEXT\\$|fsnext\\$|GASDEV|gasdev|GET_COLOR|get_color|COLOR_RGB|color_rgb|GLOB|glob|GRAY|gray|HYPOT|hypot|INP|inp|INP\\?|inp\\?|INSTR|instr|INT|int|JULIAN|julian|LEN|len|LN|ln|LOG|log|LOG10|log10|LOG1P|log1p|LOGB|logb|LPEEK|lpeek|LTEXTLEN|ltextlen|MALLOC|malloc|MAX|max|MIN|min|MOD|mod|OBJC_DRAW|objc_draw|OBJC_FIND|objc_find|ODD|odd|PEEK|peek|POINT|point|PRED|pred|RAD|rad|RAND|rand|RANDOM|random|REALLOC|realloc|RINSTR|rinstr|RND|rnd|ROUND|round|RSRC_GADDR|rsrc_gaddr|SGN|sgn|SHM_ATTACH|shm_attach|SHM_MALLOC|shm_malloc|SIN|sin|SINH|sinh|SQR|sqr|SQRT|sqrt|SRAND|srand|SUCC|succ|SYM_ADR|sym_adr|TALLY|tally|TAN|tan|TANH|tanh|TRUNC|trunc|TYP\\?|typ\\?|VAL|val|VARPTR|varptr|WORT_SEP|wort_sep|BIN\\$|bin\\$|CHR\\$|chr\\$|DECLOSE\\$|declose\\$|ENCLOSE\\$|enclose\\$|ENV\\$|env\\$|ERR\\$|err\\$|HEX\\$|hex\\$|INLINE\\$|inline\\$|INPUT\\$|input\\$|encrypt\\$|ENCRYPT\\$|decrypt\\$|DECRYPT\\$|compress\\$|COMPRESS\\$|uncompress\\$|UNCOMPRESS\\$|JULDATE\\$|juldate\\$|LEFT\\$|left\\$|LINEINPUT\\$|lineinput\\$|LOWER\\$|lower\\$|MID\\$|mid\\$|MKD\\$|mkd\\$|MKF\\$|mkf\\$|MKI\\$|mki\\$|MKL\\$|mkl\\$|MKS\\$|mks\\$|OCT\\$|oct\\$|PARAM\\$|param\\$|PRG\\$|prg\\$|REPLACE\\$|replace\\$|RIGHT\\$|right\\$|SPACE\\$|space\\$|STR\\$|str\\$|STRING\\$|string\\$|SYSTEM\\$|system\\$|TERMINALNAME\\$|terminalname\\$|TRIM\\$|trim\\$|UCASE\\$|ucase\\$|UNIXDATE\\$|unixdate\\$|UNIXTIME\\$|unixtime\\$|UPPER\\$|upper\\$|XTRIM\\$|xtrim\\$|csget|csget\\$|lof|LOF|loc|LOC|EOF|eof|IOCTL|ioctl)":::Storage Type::\n\
+		sysfunctions:"(ABS|abs|ACOS|acos|ACOSH|acosh|ARRPTR|arrptr|ASC|asc|ASIN|asin|ASINH|asinh|ATAN|atan|ATAN2|atan2|ATANH|atanh|ATN|atn|BCHG|bchg|BCLR|bclr|BSET|bset|BTST|btst|CBRT|cbrt|CEIL|ceil|COS|cos|COSH|cosh|CRC|crc|CVD|cvd|CVF|cvf|CVI|cvi|CVL|cvl|CVS|cvs|DEG|deg|DET|det|DIM\\?|dim\\?|DPEEK|dpeek|EVEN|even|EXEC|exec|EXIST|exist|EXP|exp|EXPM1|expm1|FAK|fak|FFT|fft|FIX|fix|FLOOR|floor|FORK|fork|FORM_ALERT|form_alert|FORM_CENTER|form_center|FORM_DIAL|form_dial|FORM_DO|form_do|FRAC|frac|FSFIRST\\$|fsfirst\\$|FSNEXT\\$|fsnext\\$|GASDEV|gasdev|GET_COLOR|get_color|COLOR_RGB|color_rgb|GLOB|glob|GRAY|gray|HYPOT|hypot|INP|inp|INP\\?|inp\\?|INSTR|instr|REGEXP|regexp|MATCH|match|INT|int|JULIAN|julian|LEN|len|LN|ln|LOG|log|LOG10|log10|LOG1P|log1p|LOGB|logb|LPEEK|lpeek|LTEXTLEN|ltextlen|MALLOC|malloc|MAX|max|MIN|min|MOD|mod|OBJC_DRAW|objc_draw|OBJC_FIND|objc_find|ODD|odd|PEEK|peek|POINT|point|PRED|pred|RAD|rad|RAND|rand|RANDOM|random|REALLOC|realloc|RINSTR|rinstr|RND|rnd|ROUND|round|RSRC_GADDR|rsrc_gaddr|SGN|sgn|SHM_ATTACH|shm_attach|SHM_MALLOC|shm_malloc|SIN|sin|SINH|sinh|SQR|sqr|SQRT|sqrt|SRAND|srand|SUCC|succ|SYM_ADR|sym_adr|TALLY|tally|TAN|tan|TANH|tanh|TRUNC|trunc|TYP\\?|typ\\?|VAL|val|VARLEN|varlen|VARPTR|varptr|WORT_SEP|wort_sep|BIN\\$|bin\\$|CHR\\$|chr\\$|DECLOSE\\$|declose\\$|ENCLOSE\\$|enclose\\$|ENV\\$|env\\$|ERR\\$|err\\$|HEX\\$|hex\\$|INLINE\\$|inline\\$|INPUT\\$|input\\$|encrypt\\$|ENCRYPT\\$|decrypt\\$|DECRYPT\\$|compress\\$|COMPRESS\\$|uncompress\\$|UNCOMPRESS\\$|JULDATE\\$|juldate\\$|LEFT\\$|left\\$|LINEINPUT\\$|lineinput\\$|LOWER\\$|lower\\$|MID\\$|mid\\$|MKD\\$|mkd\\$|MKF\\$|mkf\\$|MKI\\$|mki\\$|MKL\\$|mkl\\$|MKS\\$|mks\\$|OCT\\$|oct\\$|PARAM\\$|param\\$|PRG\\$|prg\\$|REPLACE\\$|replace\\$|RIGHT\\$|right\\$|SPACE\\$|space\\$|STR\\$|str\\$|STRING\\$|string\\$|SYSTEM\\$|system\\$|TERMINALNAME\\$|terminalname\\$|TRIM\\$|trim\\$|UCASE\\$|ucase\\$|UNIXDATE\\$|unixdate\\$|UNIXTIME\\$|unixtime\\$|UPPER\\$|upper\\$|XTRIM\\$|xtrim\\$|csget|csget\\$|lof|LOF|loc|LOC|EOF|eof|IOCTL|ioctl)":::Storage Type::\n\
 		Label:"[0-9a-zA-Z]*:":::Label::\n\
 	}
 nedit.languageModes: 	\
