@@ -12,7 +12,7 @@ syntax "x11basic" "\.(bas|xbas|LST|BAS)$"
 icolor brightwhite "\<[A-Z_][A-Za-z0-9_]*(|\$|\%|\&|\||\(\))\>"
 
 # system vars
-icolor cyan "\<(CCSAPLID|CCSERR|COLS|CRSCOL|CRSLIN|CTIMER|ERR|FALSE)\>"
+icolor cyan "\<(ANS|CCSAPLID|CCSERR|COLS|CRSCOL|CRSLIN|CTIMER|ERR|FALSE)\>"
 icolor cyan "\<(GPS_ALT|GPS_LAT|GPS_LON|MOUSEK|MOUSES|MOUSEX|MOUSEY)\>"
 icolor cyan "\<(PC|PI|ROWS|SP|STIMER|TIMER|TRUE)\>"
 
@@ -38,15 +38,15 @@ icolor green "\<(HYPOT)\("
 icolor green "\<(IMAG|INODE|INP|INSTR|INT|INVERT|IOCTL)\("
 icolor green "\<(JULIAN)\("
 icolor green "\<(LCM|LEN|LGAMMA|LISTSELECT|LN|LOC|LOF|LOG|LOG10|LOG1P|LOGB|LPEEK|LTEXTLEN)\("
-icolor green "\<(MALLOC|MAX|MIN|MOD|MODE|MSHRINK|MUL)\("
+icolor green "\<(MALLOC|MATCH|MAX|MIN|MOD|MODE|MSHRINK|MUL)\("
 icolor green "\<(NEXTPRIME|NLINK|NOT)\("
 icolor green "\<(OBJC_DRAW|OBJC_FIND|OBJC_OFFSET|ODD|OR)\("
 icolor green "\<(PEEK|POINT|POWM|PRED|PTST)\("
-icolor green "\<(RAD|RAND|RANDOM|REAL|REALLOC|RINSTR|RND|ROL|ROOT|ROR|ROUND|RSRC_GADDR)\("
+icolor green "\<(RAD|RAND|RANDOM|REAL|REALLOC|REGEXP|RINSTR|RND|ROL|ROOT|ROR|ROUND|RSRC_GADDR)\("
 icolor green "\<(SENSOR|SGN|SHL|SHM_ATTACH|SHM_MALLOC|SHR|SIN|SINH|SIZE|SQR|SQRT|SRAND|SUB|SUCC|SWAP|SYM_ADR)\("
 icolor green "\<(TALLY|TAN|TANH|TRUNC)\("
 icolor green "\<(UBOUND)\("
-icolor green "\<(VAL|VARIAT|VARPTR|VRFY)\("
+icolor green "\<(VAL|VARIAT|VARLEN|VARPTR|VRFY)\("
 icolor green "\<(WORD|WORT_SEP)\("
 icolor green "\<(XOR)\("
 
